fix bannertop margintop on mobile

--- a/public/assets/css/_homepage.scss
+++ b/public/assets/css/_homepage.scss
@@ -40,6 +40,12 @@
     text-align: center;
     font-weight: 200;
     font-size: 1.3em;
+    @include xs {
+        margin-top: 15px;
+    }
+    @include sm {
+        margin-top: 15px;
+    }
 }
 
 .main-category-title {
