--- a/public/assets/css/style.css
+++ b/public/assets/css/style.css
@@ -58,6 +58,18 @@ MEDIA QUERIES
   font-size: 1.3em;
 }
 
+@media (min-width: 300px) and (max-width: 576px) {
+  .bannertop {
+    margin-top: 15px;
+  }
+}
+
+@media (min-width: 576px) and (max-width: 768px) {
+  .bannertop {
+    margin-top: 15px;
+  }
+}
+
 .main-category-title {
   margin-left: 35px;
 }
